<resources>
    <string name="app_name">Count It</string>
    <string name="enter_name">Name</string>
    <string name="choose_color">Color</string>
    <string name="hint_name">e.g. Clothes</string>
    <string name="hint_item_count">e.g. 4</string>
    <string name="initial_count">Initial Count</string>
    <string name="add_item">+</string>
    <string name="remove_item">-</string>
    <string name="holo_blue_light">Holo Blue Light</string>
    <string name="holo_green_light">Holo Green Light</string>
    <string name="holo_orange_light">Holo Orange Light</string>
    <string name="holo_purple_light">Holo Purple Light</string>
    <string name="holo_red_light">Holo Red Light</string>
    <string name="action_save">Save</string>
    <string name="category_name_required">Category name is required</string>
    <string name="item_name_required">Item name is required</string>
    <string name="hint_after_empty_name">Please enter category name</string>
    <string name="delete_dialog_msg">Are you sure to delete item ?</string>
    <string name="category_delete_dialog_msg">Are you sure to delete this category ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="item_deletion_success">Item deleted successfully</string>
    <string name="item_deletion_failure">Item deletion failed</string>
    <string name="category_deletion_success">Category deleted successfully</string>
    <string name="category_deletion_failure">Category deletion failed</string>
    <string name="item_updation_successful">Item updated successfully</string>
    <string name="item_updation_failed">Item updated successfully</string>

    <string-array name="colors">
        <item>@string/holo_blue_light</item>
        <item>@string/holo_green_light</item>
        <item>@string/holo_purple_light</item>
        <item>@string/holo_red_light</item>
    </string-array>
</resources>
