<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/enter_name"
                style="@style/CategoryStyle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_pet_name"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/container_gender">

            <TextView
                android:text="@string/choose_color"
                style="@style/CategoryStyle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"
                    android:id="@+id/spinner_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_initial_count">

            <TextView
                android:text="@string/initial_count"
                style="@style/CategoryStyle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_initial_count"
                    android:hint="@string/hint_item_count"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:id="@+id/done"/>

</RelativeLayout>